# blockchain-data-storage

./: .gitignore  Cargo.toml  README.md  modelo_taxas_recompensas.md  pesquisa_blockchains_armazenamento.md  proposta_arquitetura.md  relatorio_correcoes.md  requisitos_blockchain.md  todo.md  validacao_viabilidade.md  whitepaper_draft_sections_1_2_5_6_7_9_Abs.md  whitepaper_draft_sections_3_4.md  whitepaper_skeleton.md
docs/: core_storage_integration_tasks.md  difficulty_adjustment_tasks.md  initial_tasks.md  main_loop_tasks.md  mempool_mining_tasks.md  module_scopes.md  network_integration_tasks.md  network_tasks.md  offchain_storage_tasks.md  rpc_api.md  rpc_api_implementation.md  rpc_api_tasks.md  storage_tasks.md
src/: lib.rs  main.rs  mempool.rs  offchain_storage.rs  rpc.rs  rpc_extensions.rs  rpc_handlers.rs
src/consensus/: mod.rs
src/core/: mod.rs
src/network/: mod.rs
src/storage/: mod.rs
tests/: integration_test.rs  rpc_api_test.rs
web/blockchain-web/: index.html  package-lock.json  package.json  pnpm-lock.yaml
web/blockchain-web/src/: App.tsx
web/blockchain-web/src/components/: CoinCreator.tsx  FileStorage.tsx  StoredFilesList.tsx  TokenList.tsx  TransactionCreator.tsx  WalletCreator.tsx  WalletList.tsx
web/blockchain-web/src/utils/: api.ts  wallet.ts
