[package]
name = "blockchain-data-storage"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core Dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
bincode = "1.3"
log = "0.4"
env_logger = "0.11"

# Network Dependencies
libp2p = { version = "0.53", features = ["tokio", "tcp", "yamux", "kad", "gossipsub", "mdns", "macros", "request-response", "noise"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Storage Dependencies
rocksdb = { version = "0.22", default-features = false, features = ["lz4"] }

# CLI and Runtime Dependencies
clap = { version = "4.5", features = ["derive"] }

# RPC API Dependencies
actix-web = "4"

# Offchain Storage Dependencies
base64 = "0.22"
thiserror = "1.0"

# Testing Dependencies
[dev-dependencies]
tempfile = "3.10"

